--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,44 @@
 server {
-    listen 80;
+    listen 3000 ssl;
     server_name $SERVER_NAME;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-        try_files $uri /index.html;
-    }
+    ssl_certificate /etc/ssl/certs/cert.pem;
+	ssl_certificate_key /etc/ssl/private/key.pem;
+	ssl_protocols	TLSv1.3;
 
     # API 프록시
-    location ft/api/ {
-        proxy_pass http://backend:8083/;
+    location /ft/api {
+        
+        proxy_pass http://backend:8083;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+
+    location /ft/ws/ {
+    proxy_pass http://backend:8083;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+}
+
+    location / {
+        try_files $uri /index.html;
+    }
+
+}
+
+# HTTP 요청을 HTTPS로 리디렉션 (선택)
+server {
+    listen 80;
+    server_name $SERVER_NAME;
+    return 301 https://$host$request_uri;
 }
 
