--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - "./frontend/.env.production"
     ports:
-      - "3000:80"
+      - "3000:3000"
     networks:
       - pong_network
     restart: always
@@ -28,15 +28,15 @@ services:
     restart: always
 
 volumes:
-  back_end_vol:
-    name: back_end_vol
+  backend_vol:
+    name: backend_vol
     driver: local
     driver_opts:
       type: none
-      device: srcs
+      device: ./backend/vol
       o: bind
 
 networks:
   pong_network:
-    dirver: bridge
+    driver: bridge
 
