--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE = http://localhost:8083
+VITE_API_BASE = https://localhost:3000
 VITE_CLIENT_ID = 638924682010-jhcf91jmst7nvq9ks9080gnvmqs4lpj8.apps.googleusercontent.com
 SERVER_NAME = localhost
